[tool.poetry]
name = "boundary-dou-plus-plus"
version = "0.1.0"
description = "code for Boundary Difference Over Union Loss++ For Lung Nodule Segmentation"
authors = ["Volodymyr Sydorskyi"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
